<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StockTicker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enterTicker">Enter a ticker:</string>
    <string name="placeholder">Enter symbol...</string>

    <string name="symbol">Symbol:</string>
    <string name="name">Name:</string>
    <string name="exchange">Listing Exchange:</string>
    <string name="lastTradePrice">Last Trade Price</string>
    <string name="lastTradeTime">Last Trade Time</string>
    <string name="change">Change</string>
    <string name="yearRange">52 Week Range</string>
</resources>
